@@ -1,3 +1,7 @@
+2005-10-23  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* test/nc*_test_master.c: gettimeofday is now in POSIX
+
 2005-10-13  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* docs/manpages/sys/socketpair.2: Removed this man page since
